<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.LegalNoticesFragment"
    android:layout_marginTop="?attr/actionBarSize">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/legal_layout_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/legal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <ImageButton
                    android:id="@+id/user_profile_legal"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/profil_circle_border_img"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu_profil"/>

                <TextView
                    android:id="@+id/legal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/user_profile_legal"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/app_name"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/legal_layout_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/legal_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_legal_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/app_name_value" />

                <TextView
                    android:id="@+id/user_legal_version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/app_version" />

                <TextView
                    android:id="@+id/user_legal_creation"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/app_creation" />

                <TextView
                    android:id="@+id/user_legal_creator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/app_creator" />

                <TextView
                    android:id="@+id/user_legal_creator_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/app_creator_email" />

                <TextView
                    android:id="@+id/user_legal_copyright"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/app_copyright" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
