<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.login.LoginActivityFragment"
    tools:showIn="@layout/activity_login">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="46dp"
        android:id="@+id/textEditLogin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/textEditPwd"
        android:layout_below="@+id/textEditLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:layout_alignRight="@+id/textEditLogin"
        android:layout_alignEnd="@+id/textEditLogin"
        android:hint="@string/pwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connection"
        android:id="@+id/buttonConnection"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:layout_below="@+id/textEditPwd"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
