<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.HelpFragment"
    android:layout_marginTop="?attr/actionBarSize">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/help_layout_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/help_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <ImageButton
                    android:id="@+id/user_profile_help"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/profil_circle_border_img"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu_help"/>

                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/user_profile_help"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/help_title"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/help_layout_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_help_help1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/help_accessMcq" />

                <TextView
                    android:id="@+id/user_help_help2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/help_WithoutData" />

                <TextView
                    android:id="@+id/user_help_help3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/help_timer" />

                <TextView
                    android:id="@+id/user_help_help4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/help_InfoUser" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
